wishlist & product category changes